--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                                 <img src="assets/images/me.png" alt="About Me">
                             </div>
                             <div class="infos">
-                                <h4>A WEB DESIGNER</h4>
-                                <h1>David Henderson.</h1>
-                                <p>I am a Web Designer based in san francisco.</p>
+                                <h4>SOFTWARE ENGINEER</h4>
+                                <h1>Nardos Kebamo</h1>
+                                <p>I am a Software Engineer based in Addis Ababa, Ethiopia.</p>
                                 <a href="#" class="about-btn">
                                     <img src="assets/images/icon.svg" alt="Button">
                                 </a>
