--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gridx - Personal Portfolio HTML Template</title>
+    <title>Nardos - Personal Portfolio HTML Template</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
 
     <main class="main-homepage">
@@ -29,7 +30,7 @@
             <div class="container">
                 <div class="gx-row d-flex align-items-center justify-content-between">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img src="assets/images/logo.png" alt="Logo">
                     </a>
 
                     <nav class="navbar">
@@ -269,14 +270,11 @@
             </div>
         </footer>
 
-    </main>
-    
+    </main>    
 
     <script src="assets/js/jquery-3.6.4.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
-
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 10 Dec 2023 08:39:59 GMT -->
 </html>
