--- a/work-details.html
+++ b/work-details.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
 
+    <link rel="stylesheet" href="assets/css/iconoir.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
