--- a/blog-details.html
+++ b/blog-details.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/blog-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 10 Dec 2023 08:40:27 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gridx - Personal Portfolio HTML Template</title>
+    <title>NarDoz</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="../../../cdn.jsdelivr.net/gh/iconoir-icons/iconoir%40main/css/iconoir.css">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
@@ -30,7 +27,7 @@
             <div class="container">
                 <div class="gx-row d-flex align-items-center justify-content-between">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img src="assets/images/logo.png" alt="Logo">
                     </a>
 
                     <nav class="navbar">
@@ -219,13 +216,12 @@
         </section>
 
 
-
         <!-- Footer -->
         <footer class="footer-area">
             <div class="container">
                 <div class="footer-content text-center">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img src="assets/images/logo.png" alt="Logo">
                     </a>
                     <ul class="footer-menu">
                         <li><a href="index.html">Home</a></li>
@@ -234,7 +230,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
-                        &copy; All rights reserved by <span>WordPress River</span>
+                        &copy; All rights reserved by <span>Eaglopia</span>
                     </p>
                 </div>
             </div>
@@ -249,5 +245,4 @@
     <script src="assets/js/main.js"></script>
 </body>
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/blog-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 10 Dec 2023 08:40:27 GMT -->
 </html>
