--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 10 Dec 2023 08:39:41 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nardos - Personal Portfolio HTML Template</title>
+    <title>NarDoz</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="../../../cdn.jsdelivr.net/gh/iconoir-icons/iconoir%40main/css/iconoir.css">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">    
@@ -68,7 +65,7 @@
                             </div>
                             <div class="infos">
                                 <h4>SOFTWARE ENGINEER</h4>
-                                <h1>Nardos Kebamo</h1>
+                                <h1>Nardos K.</h1>
                                 <p>I am a Software Engineer based in Addis Ababa, Ethiopia.</p>
                                 <a href="#" class="about-btn">
                                     <img src="assets/images/icon.svg" alt="Button">
@@ -256,7 +253,7 @@
             <div class="container">
                 <div class="footer-content text-center">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img src="assets/images/logo.png" alt="Logo">
                     </a>
                     <ul class="footer-menu">
                         <li><a href="index.html">Home</a></li>
@@ -265,7 +262,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
-                        &copy; All rights reserved by <span>WordPress River</span>
+                        &copy; All rights reserved by <span>Eaglopia</span>
                     </p>
                 </div>
             </div>
