--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/iconoir.css">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style-light.css">
 </head>
 <body>
 
