--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NarDoz</title>
+    <title>Nardos - Personal Website</title>
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -15,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/iconoir.css">
-    <link rel="stylesheet" href="assets/css/style-light.css">
+    <link rel="stylesheet" href="assets/css/style-dark.css">
 </head>
 <body>
 
@@ -57,7 +58,7 @@
                     <div data-aos="zoom-in">
                         <div class="about-image-box shadow-box">
                             <img src="assets/images/bg1.png" alt="BG" class="bg-img">
-                            <div class="image-inner">
+                            <div class="image-box">
                                 <img src="assets/images/me2.png" alt="About Me">
                             </div>
                         </div>
@@ -67,8 +68,8 @@
                         <h1 class="section-heading" data-aos="fade-up"><img src="assets/images/star-2.png" alt="Star"> Self-summary <img src="assets/images/star-2.png" alt="Star"></h1>
                         <div class="about-details-inner shadow-box">
                             <img src="assets/images/icon2.png" alt="Star">
-                            <h1>David Henderson</h1>
-                            <p>I am a San francisco-based product designer with a focus on web design, illustration, a visual development. I have a diverse range of experience having worked across various fields and industries.</p>
+                            <h1>Nardos K.</h1>
+                            <p>I am a Addis Ababa-based software developer with a focus on desktop and web application development. I have a diverse range of experience having worked across various fields and industries.</p>
                         </div>
 
                     </div>
@@ -82,14 +83,14 @@
 
                             <ul>
                                 <li>
-                                    <p class="date">2007 - 2017</p>
-                                    <h2>Framer Designer & Developer</h2>
-                                    <p class="type">Bluebase Designs</p>
+                                    <p class="date">2020 - 2023</p>
+                                    <h2>Senior Software Engineer</h2>
+                                    <p class="type">NYLOS Software</p>
                                 </li>
                                 <li>
-                                    <p class="date">2017 - 2023</p>
-                                    <h2>Front-End Developer</h2>
-                                    <p class="type">Larsen & Toubro</p>
+                                    <p class="date">2016 - 2019</p>
+                                    <h2>Senior Software Developer</h2>
+                                    <p class="type">CNET Software Technologies PLC</p>
                                 </li>
                             </ul>
                         </div>
@@ -101,14 +102,14 @@
 
                             <ul>
                                 <li>
-                                    <p class="date">2004 - 2007</p>
-                                    <h2>Bachelor Degree in Psychology</h2>
-                                    <p class="type">University of California</p>
+                                    <p class="date">2020 - 2021</p>
+                                    <h2>MERN Stack Web Development</h2>
+                                    <p class="type">Evangadi Networks</p>
                                 </li>
                                 <li>
-                                    <p class="date">2007 - 2009</p>
-                                    <h2>Master Degree in Designing</h2>
-                                    <p class="type">University of Texas</p>
+                                    <p class="date">2011 - 2016</p>
+                                    <h2>Bachelor Degree in Electrical and Computer Engineering</h2>
+                                    <p class="type">Addis Ababa University Institute of Technology (AAiT)</p>
                                 </li>
                             </ul>
                         </div>
@@ -123,11 +124,11 @@
                                 <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                        <a href="#">
-                                            <i class="iconoir-dribbble"></i>
+                                        <a href="https://www.linkedin.com/in/nardosk/">
+                                            <i class="iconoir-linkedin"></i>
                                         </a>
-                                        <a href="#">
-                                            <i class="iconoir-twitter"></i>
+                                        <a href="https://github.com/nardosk/">
+                                            <i class="iconoir-github"></i>
                                         </a>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
