--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NarDoz</title>
+    <title>Nardos - Personal Website</title>
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -15,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/iconoir.css">
-    <link rel="stylesheet" href="assets/css/style-light.css">
+    <link rel="stylesheet" href="assets/css/style-dark.css">
 </head>
 <body>
 
