--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NarDoz</title>
+    <title>Nardos - Personal Website</title>
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -15,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/iconoir.css">
-    <link rel="stylesheet" href="assets/css/style-light.css">
+    <link rel="stylesheet" href="assets/css/style-dark.css">
 </head>
 <body>
 
@@ -63,8 +64,8 @@
                                 </div>
                                 <div class="right">
                                     <span>MAIL us</span>
-                                    <h4>info@bluebase.com</h4>
-                                    <h4>info@bluebase2.com</h4>
+                                    <h4>devnardos@gmail.com</h4>
+                                    <h4>contact@nardos.et</h4>
                                 </div>
                             </li>
 
@@ -73,9 +74,9 @@
                                     <i class="iconoir-phone"></i>
                                 </div>
                                 <div class="right">
-                                    <span>Contact Us</span>
-                                    <h4>+1 504-899-8221</h4>
-                                    <h4>+1 504-749-5456</h4>
+                                    <span>Contact Me</span>
+                                    <h4>+251 912-34-0157</h4>
+                                    <h4>+251 912-34-0157</h4>
                                 </div>
                             </li>
 
@@ -85,16 +86,16 @@
                                 </div>
                                 <div class="right">
                                     <span>Location</span>
-                                    <h4>22 Baker Street, Texas <br>United States <br>W1U 3BW</h4>
+                                    <h4>Kasanchis, Addis Ababa <br>Ethiopia </h4>
                                 </div>
                             </li>
                         </ul>
 
                         <h3 data-aos="fade-up">Social Info</h3>
                         <ul class="social-links d-flex align-center" data-aos="zoom-in">
-                            <li><a class="shadow-box" href="#"><i class="iconoir-dribbble"></i></a></li>
-                            <li><a class="shadow-box" href="#"><i class="iconoir-twitter"></i></a></li>
-                            <li><a class="shadow-box" href="#"><i class="iconoir-instagram"></i></a></li>
+                            <li><a class="shadow-box" href="https://www.linkedin.com/in/nardosk/"><i class="iconoir-linkedin"></i></a></li>
+                            <li><a class="shadow-box" href="https://t.me/eaglopia"><i class="iconoir-telegram"></i></a></li>
+                            <li><a class="shadow-box" href="https://www.instagram.com/eaglopia/"><i class="iconoir-instagram"></i></a></li>
                         </ul>
                     </div>
 
@@ -103,7 +104,7 @@
                             <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                             <img src="assets/images/icon3.png" alt="Icon">
                             <h1>Let’s work <span>together.</span></h1>
-                            <form method="POST" action="https://wpriverthemes.com/landing/gridx-html/mailer.php">
+                            <form method="POST" action="send-mail.php">
                                 <div class="alert alert-success messenger-box-contact__msg" style="display: none" role="alert">
                                     Your message was sent successfully.
                                 </div>
