--- a/credentials.html
+++ b/credentials.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NarDoz</title>
+    <title>Nardos - Personal Website</title>
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -15,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/iconoir.css">
-    <link rel="stylesheet" href="assets/css/style-light.css">
+    <link rel="stylesheet" href="assets/css/style-dark.css">
 </head>
 <body>
 
@@ -59,16 +60,16 @@
                             <div class="shadow-box">
                                 <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                 <div class="img-box">
-                                    <img src="assets/images/me.png" alt="About Me">
+                                    <img src="assets/images/me3.png" alt="About Me">
                                 </div>
                                 <h2>Nardos K.</h2>
                                 <p>@nardosk</p>
         
                                 <ul class="social-links d-flex justify-content-center">
-                                    <li><a href="#"><i class="iconoir-dribbble"></i></a></li>
-                                    <li><a href="#"><i class="iconoir-twitter"></i></a></li>
-                                    <li><a href="#"><i class="iconoir-instagram"></i></a></li>
-                                    <li><a href="#"><i class="iconoir-facebook-tag"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/nardosk/"><i class="iconoir-linkedin"></i></a></li>
+                                    <li><a href="https://github.com/nardosk"><i class="iconoir-github"></i></a></li>
+                                    <li><a href="https://t.me/eaglopia"><i class="iconoir-telegram"></i></a></li>
+                                    <li><a href="https://www.instagram.com/eaglopia/"><i class="iconoir-instagram"></i></a></li>
                                 </ul>
         
                                 <a href="contact.html" class="theme-btn">Contact Me</a>
@@ -79,39 +80,40 @@
                     <div class="credential-content flex-1">
                         <div class="credential-about" data-aos="zoom-in">
                             <h2>About Me</h2>
-                            <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor rhoncus dolor purus non enim praesent in elementum sahas facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etisam dignissim diam quis enim lobortis viverra orci sagittis eu volutpat odio facilisis mauris sit.</p>
-                            <p>Scelerisque fermentum duisi faucibus in ornare quam sisd sit amet luctussd fav venenatis, lectus magna fringilla zac urna, porttitor rhoncus dolor purus non enim praesent cuz elementum sahas facilisis leot.</p>
+                            <p>Throughout my career as a Senior Software Engineer and Developer, I've immersed myself in the world of technology, specializing in the development of both web and desktop applications. Proficient in C#, JavaScript, SQL, MySQL, Node.js, Angular, React, and Tailwind CSS, I've successfully architected scalable solutions and upheld high code quality standards.</p>
+
+                            <p>My expertise extends beyond the technical realm to include effective collaboration with cross-functional teams, ensuring the seamless delivery of projects. Whether it's crafting dynamic web applications or robust desktop solutions, my analytical thinking and creative flair converge to create impactful contributions across diverse domains.</p>
                         </div>
 
                         <div class="credential-edc-exp credential-experience">
                             <h2 data-aos="fade-up">Experience</h2>
                             <div class="credential-edc-exp-item" data-aos="zoom-in">
-                                <h4>2007 - 2017</h4>
-                                <h3>Framer Designer & Developer</h3>
-                                <h5>Bluebase Designs</h5>
-                                <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor rhoncus dolor purus non enim praesent in elementum sahas facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etisam dignissim diam quis enim lobortis viverra orci sagittis eu volutpat odio facilisis mauris sit.</p>
+                                <h4>2020 - 2023</h4>
+                                <h3>Senior Software Engineer</h3>
+                                <h5>NYLOS Software</h5>
+                                <p>As a Senior Software Engineer and Team Leader, I've led teams in utilizing a tech stack that includes C#, JavaScript, SQL, MySQL, Node.js, Angular, React, and Tailwind CSS. This expertise has been instrumental in architecting scalable solutions and maintaining high code quality. I've actively contributed to successful project deliveries and the integration of emerging technologies.</p>
                             </div>
                             <div class="credential-edc-exp-item" data-aos="zoom-in">
-                                <h4>2017 - 2023</h4>
-                                <h3>Front-End Developer</h3>
-                                <h5>Larsen & Toubro</h5>
-                                <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor rhoncus dolor purus non enim praesent in elementum sahas facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etisam dignissim diam quis enim lobortis viverra orci sagittis eu volutpat odio facilisis mauris sit.</p>
+                                <h4>2016 - 2019</h4>
+                                <h3>Senior Software Developer</h3>
+                                <h5>CNET Software Technologies PLC</h5>
+                                <p>In my role as a software developer with a focus on C# and the .NET framework, I've played a key part in leading and contributing to various projects. Proficient in C#, I've applied my expertise to develop scalable solutions within the .NET ecosystem. My experience encompasses feature design, code quality assurance, and successful collaboration with cross-functional teams to deliver impactful .NET projects.</p>
                             </div>
                         </div>
 
                         <div class="credential-edc-exp credential-education">
                             <h2 data-aos="fade-up">Education</h2>
                             <div class="credential-edc-exp-item" data-aos="zoom-in">
-                                <h4>2004 - 2007</h4>
-                                <h3>Bachelor Degree in Psychology</h3>
-                                <h5>University of California</h5>
-                                <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor rhoncus dolor purus non enim praesent in elementum sahas facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etisam dignissim diam quis enim lobortis viverra orci sagittis eu volutpat odio facilisis mauris sit.</p>
+                                <h4>2020 - 2021</h4>
+                                <h3>MERN Stack Web Development</h3>
+                                <h5>Evangadi Networks</h5>
+                                <p>Skilled in MongoDB, Express.js, React, and Node.js, I bring a versatile skill set to web development, covering database management, server-side development, and dynamic user interface creation. Additionally, I am proficient in modern JavaScript, Git version control, deployment strategies, and web security.</p>
                             </div>
                             <div class="credential-edc-exp-item" data-aos="zoom-in">
-                                <h4>2007 - 2009</h4>
-                                <h3>Master Degree in Designing</h3>
-                                <h5>University of Texas</h5>
-                                <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor rhoncus dolor purus non enim praesent in elementum sahas facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etisam dignissim diam quis enim lobortis viverra orci sagittis eu volutpat odio facilisis mauris sit.</p>
+                                <h4>2011 - 2016</h4>
+                                <h3>Bachelor Degree in Electrical and Computer Engineering</h3>
+                                <h5>Addis Ababa University Institute of Technology (AAiT)</h5>
+                                <p>Proficient in Electrical and Computer Engineering, I've honed skills in circuit design, embedded systems, and digital signal processing. My expertise extends to programming languages like C++ and Java, as well as familiarity with hardware design and microcontroller programming. Additionally, I possess a strong foundation in mathematics, problem-solving, and collaborative project work.</p>
                             </div>
                         </div>
 
@@ -119,51 +121,51 @@
                             <h2 data-aos="fade-up">Skills</h2>
                             <div class="d-grid skill-items gap-24 flex-wrap">
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">85%</span>
-                                    <h3 class="name">JavaScript</h3>
-                                    <p>Non enim praesent</p>
+                                    <span class="percent">Programming Languages</span>
+                                    <h3 class="name">C#, Javascript</h3>
+                                    <p>Different programming languages used to develop desktop and web applications.</p>
                                 </div>
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">78%</span>
-                                    <h3 class="name">Python</h3>
-                                    <p>Non enim praesent</p>
+                                    <span class="percent">Databases</span>
+                                    <h3 class="name">SQL, MySQL</h3>
+                                    <p>Relational and Non-Relational databases used in software development.</p>
                                 </div>
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">92%</span>
-                                    <h3 class="name">Figma</h3>
-                                    <p>Non enim praesent</p>
+                                    <span class="percent">Backend Tech Stacks</span>
+                                    <h3 class="name">.NET, Node.js</h3>
+                                    <p>Tech stacks used to build backend api and microservices.</p>
                                 </div>
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">90%</span>
-                                    <h3 class="name">WordPress</h3>
-                                    <p>Non enim praesent</p>
+                                    <span class="percent">Version Controls</span>
+                                    <h3 class="name">Git, TFS</h3>
+                                    <p>Tools used to track and manage changes to software code.</p>
                                 </div>
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">81%</span>
-                                    <h3 class="name">React</h3>
-                                    <p>Non enim praesent</p>
+                                    <span class="percent">Frontend Tech Stacks</span>
+                                    <h3 class="name">React, Angular</h3>
+                                    <p>Frameworks and Libraries used to build the front-end web application.</p>
                                 </div>
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">87%</span>
-                                    <h3 class="name">Adobe XD</h3>
-                                    <p>Non enim praesent</p>
+                                    <span class="percent">Project Management</span>
+                                    <h3 class="name">Slack, Trello</h3>
+                                    <p>Task management and communication platforms used during project management.</p>
                                 </div>
 
                             </div>
                         </div>
 
                         <div class="skills-wrap awards-wrap">
-                            <h2 data-aos="fade-up">Awards</h2>
+                            <h2 data-aos="fade-up">Certification</h2>
                             <div class="d-grid skill-items gap-24 flex-wrap">
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">14 May 2020</span>
-                                    <h3 class="name">Bluebase</h3>
-                                    <p>Non enim praesent</p>
+                                    <span class="percent">16 March 2021</span>
+                                    <h3 class="name">MERN Stack Web Development</h3>
+                                    <p>Certificate</p>
                                 </div>
                                 <div class="skill-item" data-aos="zoom-in">
-                                    <span class="percent">26 June 2018</span>
-                                    <h3 class="name">Demble</h3>
-                                    <p>Non enim praesent</p>
+                                    <span class="percent">09 July 2016</span>
+                                    <h3 class="name">Electrical and Computer Engineering</h3>
+                                    <p>BSc.</p>
                                 </div>
 
                             </div>
