--- a/service.html
+++ b/service.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NarDoz</title>
+    <title>Nardos - Personal Website</title>
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -16,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/iconoir.css">
 
-    <link rel="stylesheet" href="assets/css/style-light.css">
+    <link rel="stylesheet" href="assets/css/style-dark.css">
 </head>
 <body>
 
@@ -64,20 +65,20 @@
                             <div class="service-sidebar-inner shadow-box">
                                 <ul>
                                     <li>
-                                        <i class="iconoir-camera icon"></i>
-                                        PHOTOGRAPHY
+                                        <i class="iconoir-developer icon"></i>
+                                        DEVELOPMENT
                                     </li>
                                     <li>
                                         <i class="iconoir-design-pencil icon"></i>
-                                        WEB DESIGNING
+                                        DESIGN
                                     </li>
                                     <li>
-                                        <i class="iconoir-color-filter icon"></i>
-                                        BRANDING
+                                        <i class="iconoir-database icon"></i>
+                                        DATABASE
                                     </li>
                                     <li>
-                                        <i class="iconoir-dev-mode-phone icon"></i>
-                                        DEVELOPMENT
+                                        <i class="iconoir-brain-research icon"></i>
+                                        CONSULTING
                                     </li>
                                 </ul>
                             </div>
@@ -92,20 +93,20 @@
                             <div class="service-content-inner shadow-box">
                                 <div class="service-items">
                                     <div class="service-item">
-                                        <h3>Photography</h3>
-                                        <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor asna rhoncus dolor purus non enim aberitin praesent in elementum sahas facilisis leo, vel fringilla est etisam dignissim.</p>
+                                        <h3>Software Development</h3>
+                                        <p>I specialize in creating custom software solutions designed to meet the specific needs of businesses. From planning to execution, my focus is on developing applications with unique user interfaces, strong features, and scalability, ensuring a seamless fit with specific business requirements.</p>
                                     </div>
                                     <div class="service-item">
-                                        <h3>Web Designing</h3>
-                                        <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor asna rhoncus dolor purus non enim aberitin praesent in elementum sahas facilisis leo, vel fringilla est etisam dignissim.</p>
+                                        <h3>Software Design</h3>
+                                        <p>Using basic design principles, I specialize in creating innovative and user-friendly interfaces for both web and desktop applications. My designs prioritize user experiences, combining visual appeal with easy-to-use features to improve overall usability.</p>
                                     </div>
                                     <div class="service-item">
-                                        <h3>Branding</h3>
-                                        <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor asna rhoncus dolor purus non enim aberitin praesent in elementum sahas facilisis leo, vel fringilla est etisam dignissim.</p>
+                                        <h3>Database Management</h3>
+                                        <p>With a good understanding of databases, I expertly manage and optimize them for efficiency and reliability. This includes designing organized database structures, optimizing queries, and maintaining data accuracy to significantly improve the overall performance of software applications.</p>
                                     </div>
                                     <div class="service-item">
-                                        <h3>Development</h3>
-                                        <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor asna rhoncus dolor purus non enim aberitin praesent in elementum sahas facilisis leo, vel fringilla est etisam dignissim.</p>
+                                        <h3>Consulting & Research</h3>
+                                        <p>I offer advice based on research, helping businesses make smart decisions about software architecture, technology choices, and database management. By staying informed about industry trends, I empower businesses to make thoughtful decisions that contribute to the success of their software solutions.</p>
                                     </div>
                                 </div>
                             </div>
@@ -123,11 +124,11 @@
                                 <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                        <a href="#">
-                                            <i class="iconoir-dribbble"></i>
+                                        <a href="https://www.linkedin.com/in/nardosk/">
+                                            <i class="iconoir-linkedin"></i>
                                         </a>
-                                        <a href="#">
-                                            <i class="iconoir-twitter"></i>
+                                        <a href="https://www.github.com/nardosk/">
+                                            <i class="iconoir-github"></i>
                                         </a>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
