--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NarDoz</title>
+    <title>Nardos - Personal Website</title>
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -15,8 +17,8 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">    
     <link rel="stylesheet" href="assets/css/iconoir.css">
-    <link rel="stylesheet" href="assets/css/style-light.css">
-    
+    <link rel="stylesheet" href="assets/css/style-dark.css">
+
 </head>
 
 <body>
@@ -61,7 +63,7 @@
                             <a class="overlay-link" href="about.html"></a>
                             <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                             <div class="img-box">
-                                <img src="assets/images/me.png" alt="About Me">
+                                <img src="assets/images/me1.png" alt="About Me">
                             </div>
                             <div class="infos">
                                 <h4>SOFTWARE ENGINEER</h4>
@@ -158,10 +160,10 @@
                                     <a href="service.html" class="overlay-link"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="icon-boxes">
-                                        <i class="iconoir-camera"></i>
+                                        <i class="iconoir-developer"></i>
                                         <i class="iconoir-design-pencil"></i>
-                                        <i class="iconoir-color-filter"></i>
-                                        <i class="iconoir-dev-mode-phone"></i>
+                                        <i class="iconoir-database"></i>
+                                        <i class="iconoir-brain-research"></i>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="infos">
@@ -181,11 +183,11 @@
                                 <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                        <a href="#">
-                                            <i class="iconoir-dribbble"></i>
+                                        <a href="https://www.linkedin.com/in/nardosk/">
+                                            <i class="iconoir-linkedin"></i>
                                         </a>
-                                        <a href="#">
-                                            <i class="iconoir-twitter"></i>
+                                        <a href="https://github.com/nardosk/">
+                                            <i class="iconoir-github"></i>
                                         </a>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
@@ -214,17 +216,17 @@
                             <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                             <div class="clients d-flex align-items-start gap-24 justify-content-center">
                                 <div class="client-item">
-                                    <h1>07</h1>
+                                    <h1>07+</h1>
                                     <p>Years <br>Experience</p>
                                 </div>
 
                                 <div class="client-item">
-                                    <h1>+125</h1>
-                                    <p>CLIENTS <br>WORLDWIDE</p>
+                                    <h1>500+</h1>
+                                    <p>CLIENTS <br>SERVED</p>
                                 </div>
 
                                 <div class="client-item">
-                                    <h1>+210</h1>
+                                    <h1>30+</h1>
                                     <p>Total <br>Projects</p>
                                 </div>
                             </div>
