Updated meta tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nardos - Personal Website</title>
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
+    <meta property="og:title" content="Nardos | Software Engineer"/>
+    <meta property="og:description" content="C#, Software Developer, .NET, Javascript, Node, SQL"/>
+    <meta property="og:image" content="https://nardos.et/assets/images/me1.png"/>
+    <meta property="og:url" content="https://nardos.et" />
+    <meta property="og:type" content="website" />
+
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
