meta tag updated

--- a/blog.html
+++ b/blog.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nardos - Personal Website</title>
-
-    <meta property="og:title" content="Nardos | Software Engineer"/>
-    <meta property="og:description" content="C#, Software Developer, .NET, Javascript, Node, SQL"/>
+    <title>Nardos | Software Engineer</title>
+    <meta property="og:title" content="Nardos | Software Engineer | Ethiopia"/>
+    <meta property="og:description" content="Dive into the world of software development with my insightful blog. Stay updated on industry trends, coding tips, and personal experiences in the ever-evolving tech landscape."/>
     <meta property="og:image" content="https://nardos.et/assets/images/me1.png"/>
     <meta property="og:url" content="https://nardos.et" />
     <meta property="og:type" content="website" />
