--- a/service.html
+++ b/service.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nardos - Personal Website</title>
-    <meta property="og:title" content="Nardos | Software Engineer"/>
-    <meta property="og:description" content="C#, Software Developer, .NET, Javascript, Node, SQL"/>
+    <title>Nardos | Software Engineer</title>
+    <meta property="og:title" content="Nardos | Software Engineer | Ethiopia"/>
+    <meta property="og:description" content="Welcome to Nardos.et! I'm a passionate software developer crafting innovative solutions. Explore my portfolio and experience the intersection of creativity and code."/>
     <meta property="og:image" content="https://nardos.et/assets/images/me1.png"/>
     <meta property="og:url" content="https://nardos.et" />
     <meta property="og:type" content="website" />
