--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 
                             <li class="d-flex align-items-center" data-aos="zoom-in">
                                 <div class="icon-box shadow-box">
-                                    <i class="iconoir-pin-alt"></i>
+                                    <i class="iconoir-map"></i>
                                 </div>
                                 <div class="right">
                                     <span>Location</span>
