--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nardos | Software Engineer</title>
+    <title>Nardos | Software Engineer | Ethiopia</title>
     <meta property="og:title" content="Nardos | Software Engineer | Ethiopia"/>
     <meta property="og:description" content="Meet Nardos, a dedicated software developer with a love for turning ideas into functional code. Discover my journey, skills, and commitment to excellence in the world of programming."/>
     <meta property="og:image" content="https://nardos.et/assets/images/me1.png"/>
