--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nardos | Software Engineer</title>
+    <title>Nardos | Software Engineer | Ethiopia</title>
     <meta property="og:title" content="Nardos | Software Engineer | Ethiopia"/>
     <meta property="og:description" content="Dive into the world of software development with my insightful blog. Stay updated on industry trends, coding tips, and personal experiences in the ever-evolving tech landscape."/>
     <meta property="og:image" content="https://nardos.et/assets/images/me1.png"/>
