--- a/credentials.html
+++ b/credentials.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nardos | Software Engineer</title>
+    <title>Nardos | Software Engineer | Ethiopia</title>
     <meta property="og:title" content="Nardos | Software Engineer | Ethiopia"/>
     <meta property="og:description" content="Explore Nardos.et to witness a showcase of my software development projects. From web applications to coding challenges, each project reflects my skills and dedication."/>
     <meta property="og:image" content="https://nardos.et/assets/images/me1.png"/>
