--- a/works.html
+++ b/works.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nardos | Software Engineer</title>
+    <title>Nardos | Software Engineer | Ethiopia</title>
     <meta property="og:title" content="Nardos | Software Engineer | Ethiopia"/>
     <meta property="og:description" content="Proficient in C#, JavaScript, SQL, MySQL, Node.js, Angular, React, and Tailwind CSS."/>
     <meta property="og:image" content="https://nardos.et/assets/images/me1.png"/>
